Adjust spacing and fix Safari bug with fieldset

--- a/src/components/FluidTypeScaleCalculator/Form/Form.module.scss
+++ b/src/components/FluidTypeScaleCalculator/Form/Form.module.scss
@@ -1,7 +1,7 @@
 .form {
   display: grid;
   grid-template-columns: minmax(0, 1fr);
-  gap: var(--sp-lg);
+  gap: var(--sp-xl);
   margin: 0;
   padding: var(--sp-lg);
   border: solid var(--sp-xxs) var(--color-surface-dark);
